--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,5 +11,6 @@ dependencies:
   mongo_dart:
   connection_pool:
   redstone:
+    path: ../redstone
   redstone_mapper:
     path: ../redstone_mapper
